--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     build: ./backend
     container_name: food_backend
     command: python manage.py runserver 0.0.0.0:8000
+    working_dir: /app
     volumes:
       - ./backend:/app
     ports:
@@ -35,12 +36,16 @@ services:
 
   celery:
     build: ./backend
-    command: celery -A config worker -l info
+    command: bash -c "export PYTHONPATH=/app && celery -A config worker -l info"
+    volumes:
+      - ./backend:/app
     depends_on:
+      - backend
       - db
       - redis
     env_file:
       - .env
+
 
 volumes:
   pgdata:
